--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -52,7 +52,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Início</a></li>
-            <li><a href="index.html#aprconfirmadas">Apresentações</a></li>
+            <li><a href="index.html#repertorio">Repertório</a></li>
             <li class="current">{{page.title}}</li>
           </ol>
         </nav>
