--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+{% assign id = page.path | split: "." | first%}
+{% assign song = site.data.songs[id] %}
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{{page.title}}</title>
+  <title>{{song.title}}</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -48,12 +51,12 @@
 
     <div class="page-title dark-background">
       <div class="container">
-        <h1>{{page.title}}</h1>
+        <h1>{{song.title}}</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Início</a></li>
             <li><a href="index.html#repertorio">Repertório</a></li>
-            <li class="current">{{page.title}}</li>
+            <li class="current">{{ song.title }}</li>
           </ol>
         </nav>
       </div>
@@ -115,7 +118,7 @@
             
             <div class="portfolio-description">
               <h2>Descrição</h2>
-                {% for description in page.description %}
+                {% for description in song.description %}
                 <p>
                   {{ description }}
                 </p>
@@ -127,7 +130,7 @@
             <div class="portfolio-info">
               <h3>Informações da peça</h3>
               <ul>
-                {% for line in page.record %}
+                {% for line in song.record %}
                   <li><strong>{{ line[0] }}</strong>{{ line[1] }}</li>
                 {% endfor %}
                 <!--
@@ -151,7 +154,7 @@
               <h2>Tradução</h2>
             </div>
         </div>
-        {% for line in page.lyrics %}
+        {% for line in song.lyrics %}
           <div class="row justify-content-center mt-1 col-lg-12">
             <div class="col">
               <div class="portfolio-description">
