Suporte apresentacoes canceladas

--- a/_includes/navmenu.html
+++ b/_includes/navmenu.html
@@ -15,6 +15,7 @@
             <ul>
               <li><a href="index.html#aprconfirmadas">Confirmadas</a></li>
               <li><a href="index.html#aprpassadas">Passadas</a></li>
+              <li><a href="index.html#aprcanceladas">Canceladas</a></li>
             </ul>
           </li>
         </ul>
