Locais de apresentação como estrutura separada

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -39,11 +39,11 @@
 
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-        {% for item in event.carousel %}
+        {% for item in site.data.venues[event.venue].carousel %}
           <div class="carousel-item {% if forloop.index == 1 %}active{% endif %}">
             <img src="assets/img/places/{{item}}" alt="">
             <div class="carousel-container">
-              <h2>{{ event.place }}</h2>
+              <h2>{{ site.data.venues[event.venue].name }}</h2>
               <p>{{ event-date }} ({{ event.weekday }}), {{ event.time }} hs</p>
             </div>
           </div>
