--- a/_includes/eventprocess.html
+++ b/_includes/eventprocess.html
@@ -4,7 +4,8 @@
     <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
         <div class="icon flex-shrink-0"><i class="bi bi-file-music"></i></div>
         <div>
-        <h4 class="title">{{ event[1].place }}</h4>
+        {% assign vn = event[1].venue %}
+        <h4 class="title">{{ site.data.venues[vn].name }}</h4>
         <p class="description">{{ event-date }}, {{ event[1].weekday }}, {{ event[1].time }} hs</p>
         {% if event[1] contains "description" %}
             {% for desc in event[1].description %}
